tests/fixtures/invalid/pow_float_float_int.py
# Cannot call pow() with Float, Float, Int
x = pow(1.0, 1.0, 1)
